test/functions/ferguson/type-value-subtype.chpl
compilerError(isSubtype(1, int):string);
